--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "smalot/pdfparser": "^2.0",
+        "phpoffice/phpword": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
