--- a/public/.htaccess
+++ b/public/.htaccess
@@ -16,10 +16,361 @@
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+    RewriteRule ^ %1 [L,R=301,QSA]
 
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^ index.php [L,QSA]
+</IfModule>
+
+# ==============================================================================
+# SECURITY HEADERS
+# ==============================================================================
+
+<IfModule mod_headers.c>
+    # Prevent clickjacking attacks
+    Header always set X-Frame-Options "SAMEORIGIN"
+    
+    # Prevent MIME type sniffing
+    Header always set X-Content-Type-Options "nosniff"
+    
+    # Enable XSS protection (legacy browsers)
+    Header always set X-XSS-Protection "1; mode=block"
+    
+    # Referrer Policy - control how much referrer information is sent
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    
+    # Permissions Policy - restrict browser features
+    Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+    
+    # Remove server signature (security through obscurity)
+    Header always unset X-Powered-By
+    Header unset X-Powered-By
+    
+    # Strict Transport Security (HSTS) - Only enable if using HTTPS
+    # Uncomment the line below when you have SSL certificate
+    # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+</IfModule>
+
+# ==============================================================================
+# PROTECT SENSITIVE FILES
+# ==============================================================================
+
+<FilesMatch "^(\.env|\.env\.backup|\.env\.production|\.git|\.gitignore|\.gitattributes|composer\.json|composer\.lock|package\.json|package-lock\.json|yarn\.lock|\.htaccess|\.htpasswd|artisan|phpunit\.xml|\.php_cs|\.php_cs\.cache|\.phpunit\.result\.cache)$">
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+    </IfModule>
+</FilesMatch>
+
+# Protect Laravel specific files
+<FilesMatch "^(\.env|\.env\.backup|\.env\.production)$">
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+    </IfModule>
+</FilesMatch>
+
+# ==============================================================================
+# PERFORMANCE OPTIMIZATIONS
+# ==============================================================================
+
+# Enable Compression
+<IfModule mod_deflate.c>
+    # Compress HTML, CSS, JavaScript, Text, XML and fonts
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
+    AddOutputFilterByType DEFLATE application/x-font
+    AddOutputFilterByType DEFLATE application/x-font-opentype
+    AddOutputFilterByType DEFLATE application/x-font-otf
+    AddOutputFilterByType DEFLATE application/x-font-truetype
+    AddOutputFilterByType DEFLATE application/x-font-ttf
+    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE font/opentype
+    AddOutputFilterByType DEFLATE font/otf
+    AddOutputFilterByType DEFLATE font/ttf
+    AddOutputFilterByType DEFLATE image/svg+xml
+    AddOutputFilterByType DEFLATE image/x-icon
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/javascript
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/xml
+
+    # Remove browser bugs (only needed for really old browsers)
+    BrowserMatch ^Mozilla/4 gzip-only-text/html
+    BrowserMatch ^Mozilla/4\.0[678] no-gzip
+    BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+    Header append Vary User-Agent
+</IfModule>
+
+# Browser Caching
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType text/x-javascript "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    ExpiresByType text/html "access plus 0 seconds"
+</IfModule>
+
+# Cache-Control Headers
+<IfModule mod_headers.c>
+    # Cache static assets
+    <FilesMatch "\.(ico|jpg|jpeg|png|gif|webp|svg|css|js|woff|woff2|ttf|eot)$">
+        Header set Cache-Control "max-age=31536000, public"
+    </FilesMatch>
+    
+    # Don't cache HTML files
+    <FilesMatch "\.(html|htm|php)$">
+        Header set Cache-Control "no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires "0"
+    </FilesMatch>
+</IfModule>
+
+# ==============================================================================
+# MIME TYPE SECURITY
+# ==============================================================================
+
+# Prevent execution of scripts in writable directories
+<IfModule mod_rewrite.c>
+    RewriteCond %{REQUEST_URI} \.(php|phtml|php3|php4|php5|pl|py|jsp|asp|sh|cgi)$ [NC]
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteCond %{REQUEST_FILENAME} \.(php|phtml|php3|php4|php5|pl|py|jsp|asp|sh|cgi)$ [NC]
+    RewriteCond %{REQUEST_URI} ^/(storage|bootstrap/cache)/
+    RewriteRule .* - [F,L]
+</IfModule>
+
+# ==============================================================================
+# HTTPS ENFORCEMENT (Uncomment when SSL is configured)
+# ==============================================================================
+
+# <IfModule mod_rewrite.c>
+#     RewriteCond %{HTTPS} off
+#     RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# </IfModule>
+
+# ==============================================================================
+# DISABLE SERVER SIGNATURE
+# ==============================================================================
+
+ServerSignature Off
+
+# ==============================================================================
+# CONTENT SECURITY POLICY (CSP) - Enhanced
+# ==============================================================================
+
+<IfModule mod_headers.c>
+    # Content Security Policy - Adjust based on your needs
+    # This is a basic CSP - customize for your application's requirements
+    # Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.bunny.net; style-src 'self' 'unsafe-inline' https://fonts.bunny.net; font-src 'self' https://fonts.bunny.net data:; img-src 'self' data: https:; connect-src 'self'; frame-ancestors 'self';"
+</IfModule>
+
+# ==============================================================================
+# HOTLINKING PROTECTION
+# ==============================================================================
+
+<IfModule mod_rewrite.c>
+    RewriteCond %{HTTP_REFERER} !^$
+    RewriteCond %{HTTP_REFERER} !^https?://(www\.)?yourdomain\.com [NC]
+    RewriteCond %{REQUEST_URI} \.(jpg|jpeg|png|gif|webp|svg|ico|css|js|pdf)$ [NC]
+    # Uncomment the line below to enable hotlinking protection
+    # RewriteRule \.(jpg|jpeg|png|gif|webp|svg|ico|css|js|pdf)$ - [F,L]
+</IfModule>
+
+# ==============================================================================
+# BLOCK MALICIOUS USER AGENTS & BOTS
+# ==============================================================================
+
+<IfModule mod_rewrite.c>
+    RewriteCond %{HTTP_USER_AGENT} ^$ [OR]
+    RewriteCond %{HTTP_USER_AGENT} ^(-|\.|') [OR]
+    RewriteCond %{HTTP_USER_AGENT} (libwww-perl|wget|python|nikto|curl|scan|java|winhttp|clshttp|loader|fetch) [NC,OR]
+    RewriteCond %{HTTP_USER_AGENT} (;|<|>|'|"|\)|\(|%0A|%0D|%27|%3C|%3E|%00) [NC,OR]
+    RewriteCond %{HTTP_USER_AGENT} (bot|crawl|slurp|spider|mediapartners|Googlebot|AdsBot|Bingbot|Yahoo|Yandex|Baiduspider|facebookexternalhit) [NC]
+    # Uncomment the line below to block these user agents
+    # RewriteRule .* - [F,L]
+</IfModule>
+
+# ==============================================================================
+# RESTRICT HTTP METHODS
+# ==============================================================================
+
+<IfModule mod_rewrite.c>
+    # Only allow GET, POST, HEAD, OPTIONS, PUT, DELETE, PATCH
+    RewriteCond %{REQUEST_METHOD} !^(GET|POST|HEAD|OPTIONS|PUT|DELETE|PATCH)$ [NC]
+    RewriteRule .* - [F,L]
+</IfModule>
+
+# ==============================================================================
+# BLOCK COMMON ATTACK PATTERNS
+# ==============================================================================
+
+<IfModule mod_rewrite.c>
+    # Block SQL injection attempts
+    RewriteCond %{QUERY_STRING} (\<|%3C).*script.*(\>|%3E) [NC,OR]
+    RewriteCond %{QUERY_STRING} GLOBALS(=|\[|\%[0-9A-Z]{0,2}) [OR]
+    RewriteCond %{QUERY_STRING} _REQUEST(=|\[|\%[0-9A-Z]{0,2}) [OR]
+    RewriteCond %{QUERY_STRING} (union|select|insert|drop|update|md5|benchmark|or|and).*(\(|%28).*(\)|%29) [NC,OR]
+    RewriteCond %{QUERY_STRING} (\.\./|\.\.|\.\.%2F|\.\.%5C) [NC,OR]
+    RewriteCond %{QUERY_STRING} (boot\.ini|etc/passwd|self/environ) [NC,OR]
+    RewriteCond %{QUERY_STRING} (localhost|loopback|127\.0\.0\.1) [NC,OR]
+    RewriteCond %{QUERY_STRING} (<|%3C)([^s]*s)+cript.*(>|%3E) [NC,OR]
+    RewriteCond %{QUERY_STRING} (<|%3C).*iframe.*(>|%3E) [NC]
+    RewriteRule .* - [F,L]
+    
+    # Block XSS attempts in URI
+    RewriteCond %{REQUEST_URI} (<|%3C).*script.*(>|%3E) [NC,OR]
+    RewriteCond %{REQUEST_URI} (<|%3C).*iframe.*(>|%3E) [NC,OR]
+    RewriteCond %{REQUEST_URI} (<|%3C).*object.*(>|%3E) [NC,OR]
+    RewriteCond %{REQUEST_URI} (<|%3C).*embed.*(>|%3E) [NC]
+    RewriteRule .* - [F,L]
+    
+    # Block directory traversal attempts
+    RewriteCond %{REQUEST_URI} (\.\./|\.\.|\.\.%2F|\.\.%5C|%2E%2E%2F|%2E%2E%5C) [NC]
+    RewriteRule .* - [F,L]
+    
+    # Block null bytes
+    RewriteCond %{QUERY_STRING} %00 [NC]
+    RewriteRule .* - [F,L]
+</IfModule>
+
+# ==============================================================================
+# PROTECT BACKUP & TEMPORARY FILES
+# ==============================================================================
+
+<FilesMatch "\.(bak|backup|old|orig|save|swp|tmp|temp|log|sql|dump|~)$">
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+    </IfModule>
+</FilesMatch>
+
+# ==============================================================================
+# PROTECT HIDDEN FILES (Double Protection)
+# ==============================================================================
+
+<FilesMatch "^\.">
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+    </IfModule>
+</FilesMatch>
+
+# ==============================================================================
+# ADDITIONAL STORAGE DIRECTORY PROTECTION
+# ==============================================================================
+
+<IfModule mod_rewrite.c>
+    # Block direct access to storage directory
+    RewriteCond %{REQUEST_URI} ^/storage/ [NC]
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteCond %{REQUEST_FILENAME} !\.(jpg|jpeg|png|gif|webp|svg|ico|css|js|pdf|woff|woff2|ttf|eot)$ [NC]
+    RewriteRule .* - [F,L]
+</IfModule>
+
+# ==============================================================================
+# FILE UPLOAD RESTRICTIONS (Additional Layer)
+# ==============================================================================
+
+# Limit file upload size (if mod_php is used)
+# Note: This is a fallback - main limits should be in php.ini
+<IfModule mod_php.c>
+    php_value upload_max_filesize 10M
+    php_value post_max_size 12M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+</IfModule>
+
+# ==============================================================================
+# ETAG MANAGEMENT
+# ==============================================================================
+
+<IfModule mod_headers.c>
+    # Remove ETags (better to use Cache-Control)
+    Header unset ETag
+</IfModule>
+
+FileETag None
+
+# ==============================================================================
+# FORCE CANONICAL DOMAIN (WWW or non-WWW)
+# ==============================================================================
+
+# Uncomment and adjust based on your preference
+# <IfModule mod_rewrite.c>
+#     # Force non-WWW (example)
+#     RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+#     RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+#     
+#     # OR Force WWW (uncomment this instead if you prefer www)
+#     # RewriteCond %{HTTP_HOST} !^www\. [NC]
+#     # RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]
+# </IfModule>
+
+# ==============================================================================
+# BLOCK ACCESS TO PHP FILES IN UPLOAD DIRECTORIES
+# ==============================================================================
+
+<IfModule mod_rewrite.c>
+    # Prevent execution of PHP files in upload directories
+    RewriteCond %{REQUEST_URI} \.(php|phtml|php3|php4|php5|pl|py|jsp|asp|sh|cgi)$ [NC]
+    RewriteCond %{REQUEST_URI} ^/(storage/app/public|public/storage)/ [NC]
+    RewriteRule .* - [F,L]
+</IfModule>
+
+# ==============================================================================
+# CUSTOM ERROR PAGES (Optional)
+# ==============================================================================
+
+# Uncomment and create custom error pages if needed
+# ErrorDocument 403 /errors/403.html
+# ErrorDocument 404 /errors/404.html
+# ErrorDocument 500 /errors/500.html
+
+# ==============================================================================
+# PREVENT IMAGE THEFT (Right-click protection - Basic)
+# ==============================================================================
+
+# Note: This is a basic measure and can be bypassed. 
+# Real protection should be implemented in JavaScript if needed.
+<IfModule mod_headers.c>
+    # Disable image dragging (basic protection)
+    # Header set X-Content-Type-Options "nosniff"
+    # Already set above, but keeping for reference
+</IfModule>
+
+# ==============================================================================
+# RATE LIMITING HEADERS (Informational)
+# ==============================================================================
+
+<IfModule mod_headers.c>
+    # Add rate limiting headers (actual rate limiting should be in Laravel)
+    # Header set X-RateLimit-Limit "100"
+    # Header set X-RateLimit-Remaining "99"
 </IfModule>
